--- a/index.css
+++ b/index.css
@@ -215,6 +215,10 @@ body{
     border-radius:10px;
 }
 
+.project img:hover {
+    cursor:pointer;
+}
+
 ::-webkit-scrollbar {
     width:5px;
     height:5px;
